discussion/kv_engine/128645/128645_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Introduce PrometheusStatistics

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-20 15:44:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 16:23:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3852/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3852/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3757/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3795/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11632/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11632/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2317/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2317/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2859/ : FAILURE

Compile error at [2020-05-20T16:00:44.922Z] ../kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2859/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/833/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
